# experimental-component-model

./: Cargo.toml  README.md  hello.wat
bindings/cargo-component-hello/: Cargo.toml
bindings/cargo-component-hello/src/: lib.rs
bindings/experimental-component-model/: Cargo.toml
bindings/experimental-component-model/src/: lib.rs
crates/cargo-component-hello/: Cargo.toml
crates/cargo-component-hello/src/: lib.rs
crates/wit-bindgen-hello/: Cargo.toml
crates/wit-bindgen-hello/src/: lib.rs
crates/wit-bindgen-hello/wit/: host.wit
